hdp: latest companion files